修改 task_kanban 添加check_status判断状态 是否显示接受和催办按钮

--- a/任务看板/task_kanban/html/task_kanban.html
+++ b/任务看板/task_kanban/html/task_kanban.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -11,7 +11,7 @@
   <title>Document</title>
 </head>
 
-<body>
+<body> -->
   <div id="taskKanbanApp">
     <div class="top-box">
       <div v-for="(item,index) in summarData" :key="index" @click="handleSummaryItemClicked(item)" class="chose-time-slot">
@@ -36,8 +36,10 @@
               <span class="task-name" @click="handleTaskNameClicked(item)">${item.task_name}</span>
               <span class="project-name">${item.project_name}</span>
             </div>
-            <div v-show="item.task_status==='toBeComplected'" class="btn-box">
-              <div class="btn" @click="designClickAccept(item)">接受</div>
+            <div v-show="item.check_status==='check_in'">
+              <div v-show="item.task_status==='toBeComplected'" class="btn-box">
+                <div class="btn" @click="designClickAccept(item)">接受</div>
+              </div>
             </div>
           </div>
         </div>
@@ -78,12 +80,14 @@
                 </el-table-column>
                 <el-table-column label="开始任务" width="120">
                   <template slot-scope="scope">
+                    <div v-show="item.check_status==='check_in'">
                       <div class="pa_task_btn" v-show="scope.row.task_status==='toBeComplected'">
                         <div class="btn" v-if="scope.row.taskScheduleStatus" @click="auditClickAccept(scope.row)"
                           type="text" size="small">接受</div>
                         <div class="btn" v-else @click="auditUrge(scope.row)" type="text" size="small">催办</div>
                       </div>
-                    </template>
+                    </div>
+                  </template>
                 </el-table-column>
               </el-table>
             </div>
@@ -101,19 +105,21 @@
               <span class="task-name" @click="handleTaskNameClicked(item)">${item.task_name}</span>
               <span class="project-name">${item.project_name}</span>
             </div>
-            <div class="btn-box" v-show="item.task_status==='toBeComplected'">
-              <div class="btn" v-if="item.taskScheduleStatus" @click="reviewClickAccept(item)">接受</div>
-              <div class="btn" v-else @click="reviewUrge(item)">催办</div>
+            <div v-show="item.check_status==='check_in'">
+              <div class="btn-box" v-show="item.task_status==='toBeComplected'">
+                <div class="btn" v-if="item.taskScheduleStatus" @click="reviewClickAccept(item)">接受</div>
+                <div class="btn" v-else @click="reviewUrge(item)">催办</div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <script src="../js/vue.min.js"></script>
+  <!-- <script src="../js/vue.min.js"></script>
   <script src="../js/vue.js"></script>
   <script src="../js/element.js"></script>
   <script src="../js/test.js"></script>
 </body>
 
-</html>
+</html> -->
