--- a/质量计划设置页面自定义控件/quality_plan_1.3/html/plan.html
+++ b/质量计划设置页面自定义控件/quality_plan_1.3/html/plan.html
@@ -17,9 +17,9 @@
     <button class="btn-itme" id="setBtn4" @click="SetRole">
       设置角色
     </button>
-    <button class="btn-itme" id="setBtn4" @click="SetStaff">
+    <!-- <button class="btn-itme" id="setBtn4" @click="SetStaff">
       设置人员
-    </button>
+    </button> -->
     <button class="btn-itme" id="setBtn4" @click="SetDurationTime">
       设置持续时间
     </button>
