--- a/成本分析控制自定义控件/cost_analysis_v1.0/cost_analysis_chart/html/plan.html
+++ b/成本分析控制自定义控件/cost_analysis_v1.0/cost_analysis_chart/html/plan.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -10,7 +10,7 @@
 		<title>Document</title>
 	</head>
 
-	<body> -->
+	<body>
 <div id="costAnalysisChartApp">
 	<!-- <div class="btn-lsit">
 				<button class="btn-itme" id="refresh" @click="refreshData">
@@ -36,10 +36,10 @@
 		</div>
 	</div>
 </div>
-<!-- <script src="../js/vue.min.js"></script>
+<script src="../js/vue.min.js"></script>
 		<script src="../js/echarts.min.js"></script>
 		<script src="../js/vue.js"></script>
 		<script src="../js/element.js"></script>
 		<script src="../js/test.js"></script>
 	</body>
-</html> -->
+</html>
